<resources>
    <string name="app_name">World Wide General Knowledge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">ahammodnasid@gmail.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_policy">Privacy policy</string>

    <string name="menu_rate">Rate us</string>
    <string name="menu_share">Share App</string>
    <string name="menu_exits">Exits</string>
</resources>