<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/examm"
            android:title="@string/menu_exam" />
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/police"
            android:title="@string/menu_policy" />

        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/rate"
            android:title="@string/menu_rate" />

        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/share"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_exits"
            android:icon="@drawable/exit"
            android:title="@string/menu_exits" />
    </group>
</menu>